apps/autodeploy/web/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: karlo-dev.nets-intranets.com
  annotations:
    kubernetes.io/ingress.class: nginx  
spec:
  rules:
    - host: karlo-dev.nets-intranets.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 5301
